# Travler_can_interface

LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/: CMakeLists.txt  README.md  package.xml
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/gait_parameter_scripts/: Triangular_param_generator.py
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/include/: main.h  shearing.h
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/include/controller/: basecontroller.h  controller_monitor.h  inverse_kinematics.h  pid_speed_controller.h  trajectories_parser.h
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/include/proxy/: control_data.h  lowerproxy.h  service_proxy.h  upperproxy.h
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/include/utils/: traveler_utils.h
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/src/: main.cpp  shearing.cpp
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/src/controller/: Inverse_kinematics.cpp  controller_monitor.cpp  pid_speed_controller.cpp  trajectories_parser.cpp
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/src/proxy/: lowerproxy.cpp  upperproxy.cpp
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/src/utils/: lowpassfilter.cpp
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/srv_and_msg/: CMakeLists.txt
LASSIE_TRAVELER_CONTROLLER-master/LASSIE_TRAVELER_CONTROLLER-master/srv_and_msg/srv/: SetInputPos.srv
Traveler_Can_Lower_Control-humble/: remote_ros.sh
Traveler_Can_Lower_Control-humble/odrivepro_can_interface/: CMakeLists.txt  package.xml
Traveler_Can_Lower_Control-humble/odrivepro_can_interface/include/odrivepro_can_includes/: can_publisher.hpp  can_service.hpp  odrive_can.hpp
Traveler_Can_Lower_Control-humble/odrivepro_can_interface/src/: can_publisher.cpp  can_service.cpp
Traveler_Can_Lower_Control-humble/srv_and_msg/: CMakeLists.txt  package.xml
Traveler_Can_Lower_Control-humble/srv_and_msg/msg/: OdriveStatus.msg  SetInputPos.msg  SetInputTorque.msg  SetInputVel.msg
Traveler_Can_Lower_Control-humble/srv_and_msg/srv/: SetInputPos.srv
